--- a/src/components/SideBarStyle.css
+++ b/src/components/SideBarStyle.css
@@ -3,7 +3,7 @@
   width: 36px;
   height: 30px;
   top: 24px;
-  right: 24px;
+  left: 12px;
   position: relative;
 
   @media (max-width: 700px) {
@@ -21,7 +21,7 @@
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-  background: #a90000;
+  background: #74dad2;
 }
 
 /* Position and sizing of clickable cross button */
