--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'Pinball';
+  src: local("Pinball"),
+  url("./assets/pinball-data-font/PinballData-K7mo.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: 'Dited';
+  src: local("Dited"),
+  url("./assets/Dited/Dited.otf");
+}
+
+@font-face {
+  font-family: "AstroSpace";
+  src: local("AstroSpace"),
+    url("./assets/a-astro-space-font/AstroSpace.ttf") format("truetype");
+}
+
+.headerName {
+  font-family: "AstroSpace";
+}
+
+
+.navItem {
+  font-family: 'Dited';
+}
