--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,24 @@ code {
     url("./assets/a-astro-space-font/AstroSpace.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "Montserrat";
+  src: local("Montserrat"),
+    url("./assets/montserrat/Montserrat-Italic-VariableFont_wght.ttf") format("truetype");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Anurati";
+  src: local("Anurati"),
+    url("./assets/anurati_font/Anurati-Regular.otf");
+}
+
+.blogContent {
+  font-family: "Dited";
+  font-size: 26px;
+}
+
 .headerName {
   font-family: "AstroSpace";
 }
