detailed home page

--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,19 @@ code {
 .navItem {
   font-family: 'Dited';
 }
+
+.scroll-arrow {
+  animation: blink-animation 0.5s ease-in-out steps(5, start) infinite;
+  -webkit-animation: blink-animation 2s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
