home screen animations

--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,11 @@ code {
   -webkit-animation: blink-animation 2s steps(5, start) infinite;
 }
 
+.more-arrow {
+  animation: blink-animation 0.5s ease-in-out steps(5, start) infinite;
+  -webkit-animation: blink-animation 2s steps(5, start) infinite;
+}
+
 @keyframes blink-animation {
   to {
     visibility: hidden;
