--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,40 @@ code {
     opacity: 1;
   }
 }
+
+.project {
+  background: #ffffff;
+  border-radius: 8px;
+  border: 1px solid #eeeeee;
+  box-shadow: 0 10px 5px rgba(0, 0, 0, 0.1);
+  color: black;
+  height: 40vh;
+  opacity: 0;
+  padding: 30px;
+  position: absolute;
+  transform: scale(0.85) translateY(50px);
+  transition: all 0.75s ease;
+  width: 65vw;
+}
+
+.project h2,
+.project p {
+  line-height: 1.5;
+  margin: 0;
+}
+.project.active {
+  box-shadow: 0 30px 20px rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transform: scale(1) translateY(0);
+  z-index: 1;
+}
+.project.next {
+  opacity: 1;
+  z-index: 0;
+}
+.project.prev {
+  opacity: 0;
+  transform: scale(1.1) translateY(-50px);
+  visibility: hidden;
+  z-index: 2;
+}
