new homepage layout

--- a/src/index.css
+++ b/src/index.css
@@ -125,11 +125,10 @@ code {
   color: black;
   height: 40vh;
   opacity: 0;
-  padding: 30px;
   position: absolute;
   transform: scale(0.85) translateY(50px);
   transition: all 0.75s ease;
-  width: 65vw;
+  /* width: 65vw; */
 }
 
 .project h2,
