--- a/src/index.css
+++ b/src/index.css
@@ -15,42 +15,41 @@ code {
 
 @font-face {
   font-family: 'Dited';
-  src: local("Dited"),
-  url("./assets/Dited/Dited.otf");
+  src: local('Dited'), url('./assets/Dited/Dited.otf');
 }
 
 @font-face {
-  font-family: "AstroSpace";
-  src: local("AstroSpace"),
-    url("./assets/a-astro-space-font/AstroSpace.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Montserrat";
-  src: local("Montserrat"),
-    url("./assets/montserrat/Montserrat-Italic-VariableFont_wght.ttf") format("truetype");
+  font-family: 'Montserrat';
+  src: local('Montserrat'),
+    url('./assets/montserrat/Montserrat-Italic-VariableFont_wght.ttf')
+      format('truetype');
   font-weight: 300;
 }
 
 @font-face {
-  font-family: "Anurati";
-  src: local("Anurati"),
-    url("./assets/anurati_font/Anurati-Regular.otf");
+  font-family: 'Anurati';
+  src: local('Anurati'), url('./assets/anurati_font/Anurati-Regular.otf');
+}
+
+/* fonts */
+@font-face {
+  font-family: 'Nixie';
+  src: url('/src/assets/nixie_one/NixieOne.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: 'Nixie';
-  src: url("./assets/nixie_one/NixieOne.ttf") format("truetype");
-}
-
-.blogContent {
-  color: white;
-  font-family: "Nixie";
-  font-size: 1.5rem;
+  font-family: 'AstroSpace';
+  src: local(AstroSpace),
+    url('/src/assets/a-astro-space-font/AstroSpace.ttf') format('truetype');
 }
 
 .headerName {
-  font-family: "AstroSpace";
+  font-family: AstroSpace;
+}
+
+.blogContent {
+  font-family: Nixie;
+  font-weight: bold;
 }
 
 .js-scroll {
@@ -69,7 +68,6 @@ code {
 .scrolled.slide-left {
   animation: slide-in-left 1s ease-in-out both;
 }
-
 
 .navItem {
   font-family: 'Dited';
