--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+.add-shadow {
+  box-shadow: black 0px 1px 2px 0px;
+  transition-duration: 500ms;
+}
+
 body {
   margin: 0;
   /* min-height: 100vh; */
