--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,7 @@
 body {
   margin: 0;
   /* min-height: 100vh; */
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -53,8 +51,7 @@ code {
 }
 
 .blogContent {
-  font-family: Nixie;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .js-scroll {
@@ -75,7 +72,7 @@ code {
 }
 
 .navItem {
-  font-family: 'Dited';
+  font-family: 'AstroSpace';
 }
 
 .scroll-arrow {
